fix: Information container image size and gap

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -142,10 +142,11 @@ $quote-font-weight: 300;
     > div {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-around;
+      justify-content: center;
+      gap: 4rem;
 
       > div {
-        flex: 0 0 25%;
+        flex: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
